# webcl-validator

./: .gitignore  CMakeLists.txt  DESIGN.txt  ISSUES.txt  LICENSE.txt  README.md  README.txt  TESTING.txt
cmake/: FindOpenCL.cmake
doc/: InstrumentationFlowChart.draw.io.xml  README.md
doc/figures/: step_source_0.cl  step_source_1.cl  step_source_2.cl  step_source_3.cl  step_source_4.cl  step_source_5.cl  step_source_6.cl  step_source_7.cl  step_source_8.cl  step_source_9_full.cl
doc/radix-sort-example/: output.cl
driver/: CMakeLists.txt  WebCLHeader.cpp  WebCLHeader.hpp  main.cpp
include/clv/: clv.h
include/wclv/: wclv.h
lib/: CMakeLists.txt  WebCLAction.cpp  WebCLAction.hpp  WebCLArguments.cpp  WebCLArguments.hpp  WebCLBuiltins.cpp  WebCLBuiltins.hpp  WebCLCommon.hpp  WebCLConfiguration.cpp  WebCLConfiguration.hpp  WebCLConsumer.cpp  WebCLConsumer.hpp  WebCLDiag.cpp  WebCLDiag.hpp  WebCLHeader.cpp  WebCLHeader.hpp  WebCLHelper.cpp  WebCLHelper.hpp  WebCLMatcher.cpp  WebCLMatcher.hpp  WebCLPass.cpp  WebCLPass.hpp  WebCLPreprocessor.cpp  WebCLPreprocessor.hpp  WebCLPrinter.cpp  WebCLPrinter.hpp  WebCLReporter.cpp  WebCLReporter.hpp  WebCLRewriter.hpp  WebCLTool.cpp  WebCLTool.hpp  WebCLTransformer.cpp  WebCLTransformer.hpp  WebCLTypes.cpp  WebCLTypes.hpp  WebCLVisitor.cpp  WebCLVisitor.hpp  clv.cpp  general.cl  kernel.cl  (+2 more)
src/: CMakeLists.txt  WebCLAction.cpp  WebCLAction.hpp  WebCLArguments.cpp  WebCLArguments.hpp  WebCLBuiltins.cpp  WebCLBuiltins.hpp  WebCLCommon.hpp  WebCLConfiguration.cpp  WebCLConfiguration.hpp  WebCLConsumer.cpp  WebCLConsumer.hpp  WebCLDebug.hpp  WebCLHeader.cpp  WebCLHeader.hpp  WebCLHelper.cpp  WebCLHelper.hpp  WebCLMatcher.cpp  WebCLMatcher.hpp  WebCLPass.cpp  WebCLPass.hpp  WebCLPreprocessor.cpp  WebCLPreprocessor.hpp  WebCLPrinter.cpp  WebCLPrinter.hpp  WebCLRenamer.cpp  WebCLRenamer.hpp  WebCLReporter.cpp  WebCLReporter.hpp  WebCLRewriter.cpp  WebCLRewriter.hpp  WebCLTool.cpp  WebCLTool.hpp  WebCLTransformation.cpp  WebCLTransformation.hpp  WebCLTransformations.cpp  WebCLTransformations.hpp  WebCLTransformer.cpp  WebCLTransformer.hpp  WebCLTransformerConfiguration.cpp  (+23 more)
test/: 3d-images.cl  CMakeLists.txt  access-array.cl  access-invalid-array.cl  access-pointer.cl  atomics-base.cl  atomics-base2.cl  atomics-basic.cl  atomics-extended.cl  atomics-extended2.cl  atomics.cl  attack.cl  builtin-load-wrapper.cl  builtin-vload-indirect.cl  builtin-vload-offset.cl  builtin-vload-prototypes.cl  builtin-vload-vstore-variations.cl  builtin-vload-wrapper.cl  builtin-vload-wrapper2.cl  builtin-vstore-wrapper.cl  complete_transformation.cl  complete_transformation_instrumented.cl  declared-functions.cl  extension-commandline-disable.cl  extension-disable.cl  extension-disable2.cl  extension-enable.cl  extension-enable2.cl  extension-enable3.cl  extension-enable4.cl  extension-enable5.cl  find-srcloc-ignores-strings-and-comments.cl  goto.cl  goto2.cl  illegal-image2d-access.cl  image2d-type-as-argument.cl  image2d-type-as-argument2.cl  image2d-type-relocation.cl  image2d-typedef.cl  include-directive.cl  (+52 more)
test/check-empty-memory/: CMakeLists.txt  main.cpp  original.cl
test/include/: 1st-level.h  2nd-level.h  builder.hpp  driver_blacklist.hpp  kernelargs.hpp  unsafe.h  validator.hpp
test/kernel-runner/: CMakeLists.txt  main.cpp
test/opencl-validator/: CMakeLists.txt  main.cpp
test/radix-sort/: CMakeLists.txt  input.cl  main.cpp  output.cl  sorter.cpp  sorter.hpp  verifier.cpp  verifier.hpp
